--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
       - name: pulling git repo
         uses: actions/checkout@v2
       - name: hello world
-        uses: echo "hello world"
+        run: echo "hello world"
