--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,11 @@ jobs:
         uses: actions/checkout@v2
       - name: hello world
         run: echo "hello world"
+      - name: Install Python Version 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+      - name: Install dependencies
+        run: pip install -r requirements.txt
