--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - "main"
+env: {{}}
 jobs:
   jobs1:
     services:
@@ -14,6 +15,7 @@ jobs:
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
+          POSTGRESS_TEST_DB: {{}}
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
