--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - "main"
-env: {{}}
+env: {{}} # environment name setup in repo
 jobs:
   jobs1:
     services:
@@ -12,7 +12,7 @@ jobs:
         image: postgres
         env:
           POSTGRES_PASSWORD: postgres
-          POSTGRESS_TEST_DB: {{}}
+          POSTGRESS_TEST_DB: {{}} # db name setup in environment variable
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
