--- a/pytest.ini
+++ b/pytest.ini
@@ -5,5 +5,5 @@ python_functions = test*
 
 markers=
     users: related with users
-    post: related with posts
+    posts: related with posts
     votes: relates with votes
