--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Test with pytest
-        run: pytest -v -m users
+        run: pytest -v -m posts
